@@ -3,16 +3,16 @@ A subclass of the mechanize browser patched to fix various bits.
 """
 
 # wwwsearch imports
-import mechanize
-from mechanize import Browser as MechanizeBrowser
-from mechanize import BrowserStateError, LinkNotFoundError
+import _mechanize_dist as mechanize
+from _mechanize_dist import Browser as MechanizeBrowser
+from _mechanize_dist import BrowserStateError, LinkNotFoundError
 
 import wsgi_intercept
 from utils import run_tidy, StringIO, \
      FixedHTTPBasicAuthHandler, FunctioningHTTPRefreshProcessor
 
 def build_http_handler():
-    from mechanize._urllib2 import HTTPHandler
+    from _mechanize_dist._urllib2 import HTTPHandler
 
     class MyHTTPHandler(HTTPHandler):
         def http_open(self, req):
